--- a/week4/pancake_maker/styles.css
+++ b/week4/pancake_maker/styles.css
@@ -1,12 +1,15 @@
 body {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: #FCD5CE;
+    color: #590d22;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
     min-height: 100vh;
     overflow: hidden;
+    font-family: "Raleway", serif;
+    font-optical-sizing: auto;
+    padding: 100px;
   }
   
   .container {
@@ -22,11 +25,11 @@ body {
     min-height: 100vh;
   }
   
-  .image-container img {
+  /* .image-container img {
     object-fit: cover;
     width: 100%;
     height: 100vh;
-  }
+  } */
   
   .form-container {
     flex: 1;
@@ -39,7 +42,7 @@ body {
     position: absolute;
     top: 20px;
     right: 20px;
-    background-color: #d17b49;
+    background-color: #ff4d6d;
     color: white;
     border-radius: 50%;
     width: 100px;
@@ -56,6 +59,7 @@ body {
   
   input[type="checkbox"] {
     margin-right: 5px;
+    accent-color: #590d22;
   }
   
   select,
@@ -63,3 +67,4 @@ body {
     display: block;
     margin-top: 10px;
   }
+
