improve styling and animation for pancake_maker

--- a/week4/pancake_maker/styles.css
+++ b/week4/pancake_maker/styles.css
@@ -25,11 +25,11 @@ body {
     min-height: 100vh;
   }
   
-  /* .image-container img {
+  .image-container img {
     object-fit: cover;
     width: 100%;
     height: 100vh;
-  } */
+  }
   
   .form-container {
     flex: 1;
@@ -58,13 +58,59 @@ body {
   }
   
   input[type="checkbox"] {
-    margin-right: 5px;
+    position: relative;
+    cursor: pointer;
+    appearance: none;
+    background-color: #fff;
+    margin: 0;
+    font: inherit;
+    width: 1.15em;
+    height: 1.15em;
+    border: 0.15em solid currentColor;
+    border-radius: 0.15em;
+    transform: translateY(0.20em);
     accent-color: #590d22;
   }
+
+  input[type=checkbox]:hover{
+    background-color: #590d22;
+  }
   
+  input[type="checkbox"]:checked {
+    background-color: #C9184A;
+  }
+
+  input[type="checkbox"]:checked::before {
+    content: '';
+    position: absolute;
+    right:4px;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    height: 0.6em;
+    width: 0.3em;
+  }
   select,
   label {
     display: block;
     margin-top: 10px;
   }
 
+  #totalPriceDisplay {
+    color: #C9184A;
+  }
+
+  select {
+    border: 2px solid #590d22;
+    border-radius: 5px;
+    width: 15em;
+    padding: 0.5em;
+    font-family: inherit;
+    background-color: #FFF0F3;
+  }
+
+  select:focus {
+    outline:0 !important;
+    border-color: #C9184A;
+  }
