--- a/week6/objects/styles.css
+++ b/week6/objects/styles.css
@@ -1,11 +1,50 @@
-/* * {
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
+}
+
+body {
+    background-color: #8ECAE6;
+    font-family: "Atkinson Hyperlegible Mono", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    padding: 2rem 0 2rem;
+    color: #023047;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+h2 {
+    text-align: center;
+    color: #023047;
+}
 
 li {
     list-style-type: none;
+    margin: 1rem 0 1rem;
+}
+
+button {
+    height: 2rem;
+    padding: 0.5rem 1rem 0.5rem;
+    background-color: #FB8500;
+    border: none;
+    font-family: inherit;
+}
+
+input {
+    padding: 0.5rem 1rem 0.5rem;
+    border: none;
+    font-family: inherit;
+    width: 100%;
 }
 
 
@@ -21,7 +60,10 @@ li {
 .form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
+    align-items: center;
+    width: 30rem;
+    max-width: 50%;
 }
 
 li {
@@ -31,6 +73,7 @@ li {
     flex-direction: column;
     align-items: center;
     padding: 2rem;
+    gap: 1rem;
 }
 
 .weatherIconContainer {
@@ -41,4 +84,10 @@ li {
 .weatherIconContainer img {
     width: 100%;
     height: auto;
+}
+
+.checkboxWrapper {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
