--- a/week7/pancake_maker_3/styles.css
+++ b/week7/pancake_maker_3/styles.css
@@ -1,126 +1,324 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --pinkish: #FFF0F3;
+  --soft-pink: #FFCCD5;
+  --bright-pink: #C9184A;
+  --deep-red: #590D22;
 }
 
 body {
-    background-color: #ffffff;
-    color: #000000;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    margin: 0;
-    /* min-height: 100vh; */
-    /* overflow: hidden; */
-  }
-  
-  .container {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    width: 100vw;
-  }
-  
-  .image-container {
-    position: relative;
-    flex: 1;
-    min-height: 100vh;
-  }
-  
-  .image-container img {
-    object-fit: cover;
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .form-container {
-    flex: 1;
-    padding: 50px;
-    min-height: 100vh;
-    overflow-y: auto;
-  }
-  
-  .price-banner {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background-color: #d17b49;
-    color: white;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-  }
-  
-  h3 {
-    margin-top: 15px;
-  }
-  
-  input[type="checkbox"] {
-    margin-right: 5px;
-  }
-  
-  select,
-  label {
-    display: block;
-    margin-top: 10px;
-  }
+  background-color: var(--soft-pink);
+  color: var(--deep-red);
+  margin: 0;
+  min-height: 100vh;
+  font-family: "Raleway", serif;
+  font-optical-sizing: auto;
+  padding: 2rem;
+}
 
-  /* styles for order page */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 5rem;
+}
+
+.image-container {
+  position: relative;
+  max-width: 50%;
+  border-radius: 10px;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+nav .container {
+  justify-content: flex-end;
+}
+
+
+.price-banner {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: var(--bright-pink);
+  color: #fff;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+#pancakeForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--pinkish);
+  padding: 2rem;
+  width: 50%;
+  border-radius: 10px;
+}
+
+input[type="checkbox"] {
+  position: relative;
+  cursor: pointer;
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  width: 1.15rem;
+  height: 1.15rem;
+  border: 0.15rem solid currentColor;
+  border-radius: 0.15rem;
+  accent-color: var(--deep-red);
+}
+
+input[type=checkbox]:hover{
+  background-color: var(--deep-red);
+}
+
+input[type="checkbox"]:checked {
+  background-color: var(--bright-pink);
+}
+
+input[type="checkbox"]:checked::before {
+  content: '';
+  position: absolute;
+  right: 4px;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+  height: 0.6rem;
+  width: 0.3rem;
+}
+
+#totalPriceDisplay {
+  color: var(--bright-pink);
+}
+
+select,
+label, input[type="text"] {
+  display: block;
+}
+
+
+
+select, input[type="text"] {
+  border: 1px solid var(--deep-red);
+  border-radius: 5px;
+  width: 100%;
+  padding: 0.5rem;
+  font-family: inherit;
+  background-color: #fff;
+  font-size: 18px;
+}
+
+select:focus {
+  outline:0 !important;
+  border-color: var(--bright-pink);
+}
+
+button {
+  width: 8rem;
+  font: inherit;
+  background-color: var(--deep-red);
+  color: #fff;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
+button:hover {
+  background-color: var(--bright-pink);
+}
+
+input[type="radio"] {
+  appearance: none;
+  width: 1.15rem;
+  height: 1.15rem;
+  border: 2px solid var(--deep-red);
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  background-color: #fff;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+input[type="radio"]:hover {
+  background-color: var(--deep-red);
+}
+
+input[type="radio"]:checked {
+  background-color: var(--bright-pink);
+  border-color: var(--bright-pink);
+}
+
+input[type="radio"]:checked::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.5em;
+  height: 0.5rem;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+/* styles for Orders page */
 
 a {
     text-decoration: none;
 }
 
 .orderContainer {
-    max-width: 900px;
+    max-width: 1200px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1rem;
     align-items: center;
-    margin-top: 2rem;
+    padding: 2rem;
 }
 
 ul {
-    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 li {
-    border: 1px solid pink;
     list-style-type: none;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 0 2rem;
-    margin: 2rem 0 2rem;
+    padding: 2rem;
+    margin: 1rem;
+    gap: 0.5rem;
+    background-color: var(--pinkish);
+    border-radius: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .dropdown {
     display: 'flex';
     align-items: center;
-    gap: 1rem;
-}
-
-button {
-    border: 1px solid black;
-}
-
-#searchOrder {
-    width: 100%;
-    padding: 0.3rem;
 }
 
 p {
-    margin: 0.5rem 0 0.5rem;
+    border-bottom: 1px solid var(--deep-red);
+    padding: 0.5rem;
+    text-align: center;
 }
 
-button {
-    padding: 0.3rem;
+.ordersToolbar {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 800px;
+  max-width: 80%;
+} 
+
+
+.formItem {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+a {
+  color: var(--deep-red);
+  font-size: 1.2rem;
+}
+
+a:hover {
+  color: var(--bright-pink);
+}
+
+/* styles for modal */
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+#orderSummaryContent {
+  position: relative;
+  background-color: var(--pinkish);
+  margin: 15% auto;
+  display: flex;
+  align-items: center;
+  width: 30%;
+  flex-direction: column;
+  padding: 2rem;
+  gap: 1rem;
+  border-radius: 10px;
+}
+
+#closeModal {
+  width: 1rem;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+}
+
+#closeModal:hover {
+  width: 1.2rem
+}
+
+#errorText {
+  border: none;
+  padding: 0;
+  margin: 0;
+  text-align: start;
+  color: red;
+  font-size: 1.2rem;
+}
+
+#userMessage {
+  border: none;
+  padding: 0;
+  margin: 0;
+  color: var(--deep-red);
+}
+
+.inputWrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.navigation {
+  display: flex;
+  margin: 1rem 0;
+  justify-content: flex-end;
+}
+
+.hidden {
+  display: none;
 }
