--- a/week7/pancake_maker_3/styles.css
+++ b/week7/pancake_maker_3/styles.css
@@ -1,3 +1,5 @@
+/* Global styles */
+
 * {
   margin: 0;
   padding: 0;
@@ -21,56 +23,31 @@ body {
   padding: 2rem;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
+a {
+  text-decoration: none;
+  color: var(--deep-red);
+  font-size: 1.2rem;
+}
+
+ul {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
-  gap: 5rem;
 }
 
-.image-container {
-  position: relative;
-  max-width: 50%;
-  border-radius: 10px;
-}
-
-.image-container img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-}
-
-nav .container {
-  justify-content: flex-end;
-}
-
-
-.price-banner {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background-color: var(--bright-pink);
-  color: #fff;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-}
-
-#pancakeForm {
+li {
+  list-style-type: none;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  background-color: var(--pinkish);
+  align-items: center;
   padding: 2rem;
-  width: 50%;
-  border-radius: 10px;
+  margin: 1rem;
+  gap: 0.5rem;
+  background-color: var(--pinkish);
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
 
 input[type="checkbox"] {
   position: relative;
@@ -106,45 +83,8 @@ input[type="checkbox"]:checked::before {
   width: 0.3rem;
 }
 
-#totalPriceDisplay {
-  color: var(--bright-pink);
-}
-
-select,
-label, input[type="text"] {
+select, label, input[type="text"] {
   display: block;
-}
-
-
-
-select, input[type="text"] {
-  border: 1px solid var(--deep-red);
-  border-radius: 5px;
-  width: 100%;
-  padding: 0.5rem;
-  font-family: inherit;
-  background-color: #fff;
-  font-size: 18px;
-}
-
-select:focus {
-  outline:0 !important;
-  border-color: var(--bright-pink);
-}
-
-button {
-  width: 8rem;
-  font: inherit;
-  background-color: var(--deep-red);
-  color: #fff;
-  border: none;
-  border-radius: 0.2rem;
-  cursor: pointer;
-  padding: 0.5rem;
-}
-
-button:hover {
-  background-color: var(--bright-pink);
 }
 
 input[type="radio"] {
@@ -181,10 +121,84 @@ input[type="radio"]:checked::before {
   border-radius: 50%;
 }
 
-/* styles for Orders page */
+select, input[type="text"] {
+  border: 1px solid var(--deep-red);
+  border-radius: 5px;
+  width: 100%;
+  padding: 0.5rem;
+  font-family: inherit;
+  background-color: #fff;
+  font-size: 18px;
+}
 
-a {
-    text-decoration: none;
+select:focus {
+  outline:0 !important;
+  border-color: var(--bright-pink);
+}
+
+button {
+  width: 8rem;
+  font: inherit;
+  background-color: var(--deep-red);
+  color: #fff;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 5rem;
+}
+
+.image-container {
+  position: relative;
+  max-width: 50%;
+  border-radius: 10px;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+nav .container {
+  justify-content: flex-end;
+}
+
+.price-banner {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: var(--bright-pink);
+  color: #fff;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+#pancakeForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--pinkish);
+  padding: 2rem;
+  width: 50%;
+  border-radius: 10px;
+}
+
+#totalPriceDisplay {
+  color: var(--bright-pink);
 }
 
 .orderContainer {
@@ -197,31 +211,12 @@ a {
     padding: 2rem;
 }
 
-ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-li {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem;
-    margin: 1rem;
-    gap: 0.5rem;
-    background-color: var(--pinkish);
-    border-radius: 0.5rem;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
 .dropdown {
     display: 'flex';
     align-items: center;
 }
 
-p {
+.decoratedParagraph {
     border-bottom: 1px solid var(--deep-red);
     padding: 0.5rem;
     text-align: center;
@@ -236,23 +231,15 @@ p {
   max-width: 80%;
 } 
 
-
 .formItem {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-a {
-  color: var(--deep-red);
-  font-size: 1.2rem;
-}
-
 a:hover {
   color: var(--bright-pink);
 }
-
-/* styles for modal */
 
 .modal {
   position: fixed;
@@ -292,19 +279,8 @@ a:hover {
 }
 
 #errorText {
-  border: none;
-  padding: 0;
-  margin: 0;
-  text-align: start;
   color: red;
   font-size: 1.2rem;
-}
-
-#userMessage {
-  border: none;
-  padding: 0;
-  margin: 0;
-  color: var(--deep-red);
 }
 
 .inputWrapper {
@@ -321,4 +297,14 @@ a:hover {
 
 .hidden {
   display: none;
+}
+
+.statusDropdownWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  width: 100%;
 }
