--- a/week7/pancake_maker_3/styles.css
+++ b/week7/pancake_maker_3/styles.css
@@ -1,4 +1,5 @@
 /* Global styles */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 * {
   margin: 0;
@@ -18,8 +19,9 @@ body {
   color: var(--deep-red);
   margin: 0;
   min-height: 100vh;
-  font-family: "Raleway", serif;
+  font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
+  font-style: normal;
   padding: 2rem;
 }
 
@@ -32,7 +34,6 @@ a {
 ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 li {
@@ -41,7 +42,7 @@ li {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  margin: 1rem;
+  margin-bottom: 1rem;
   gap: 0.5rem;
   background-color: var(--pinkish);
   border-radius: 0.5rem;
@@ -208,7 +209,6 @@ nav .container {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    padding: 2rem;
 }
 
 .dropdown {
@@ -224,11 +224,14 @@ nav .container {
 
 .ordersToolbar {
   display: flex;
-  gap: 2rem;
+  /* gap: 2rem; */
   justify-content: space-between;
-  align-items: center;
-  width: 800px;
-  max-width: 80%;
+  width: 100%;
+  margin-bottom: 1rem;
+} 
+
+.ordersToolbar input {
+  width: 85%;
 } 
 
 .formItem {
@@ -307,4 +310,14 @@ a:hover {
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   width: 100%;
+}
+
+#orderList {
+  gap: 1rem;
+}
+
+@media (max-width: 768px) {
+  #orderList {
+    justify-content: center;
+  }
 }
